base/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  selector:
    app: argocd-server
  ports:
  - port: 443
    targetPort: 8080
    nodePort: 30880
